# infinite-chat

./: .dockerignore  .env  .gitignore  README.md  docker-compose.yml
.github/workflows/: fly.yml
back/: Dockerfile  Dockerfile.ollama  fly.toml  main.py  pyproject.toml
back/.github/workflows/: fly.yml  tests.yaml
back/infra/: cache.py  logs.py
back/ollama_fly/: Dockerfile  fly.toml  setup.sh
back/src/: agent.py  conversation.py  router.py
back/src/rag/: builder.py  retriever.py
back/tests/: infinite_test.py  test_agents.py  test_api.py  test_conversation.py  test_performance.py  test_router.py  test_security.py
front/: Dockerfile  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
front/src/: App.tsx  index.css
front/src/components/: ChatBox.tsx  Conversation.tsx  ConversationList.tsx  ConversationSidebar.tsx  Input.tsx  MessageBubble.tsx  SendButton.tsx  SendIcon.tsx  SidebarToggle.tsx
front/src/contexts/: ChatContext.tsx
front/src/hooks/: useChat.ts  useConversations.ts
front/src/types/: Message.ts
front/src/utils/: cookies.ts
k8s/: ingress.yaml  kustomization.yaml
k8s/backend/: configmap.yaml  deployment.yaml  ingress.yaml  ollama-init.sh  pvc.yaml
k8s/frontend/: deployment.yaml
k8s/redis/: deployment.yaml  pvc.yaml
